# wxfractal

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  main_frame.cpp  main_frame.h  main_gui.cpp  main_gui.h
src/common/: observer.h  vec2.h
src/core/: koch.cpp  koch.h  model.h  turtle.cpp  turtle.h
src/core/lsys/: element.h  lsys.h
src/gui/: controller.cpp  controller.h  draw_panel.cpp  draw_panel.h  main_frame.cpp  main_frame.h  main_gui.cpp  main_gui.h
